--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AprendaLibras</string>
+    <string name="correct_answer">Resposta correta: %1$s</string>
 </resources>
