--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="fim_jogo_mensagem">Você perdeu!</string>
+    <string name="pontuacao_txt">Sua pontuação é: %1$d</string>
 </resources>
