--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="fim_jogo_mensagem">Você perdeu!</string>
     <string name="pontuacao_txt">Sua pontuação é: %1$d</string>
+    <string name="facebook_app_id">800845223383093</string>
+    <string name="name_txt">Conectado como: %1$s</string>
 </resources>
